--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "dir": "ltr",
     "lang": "en",
-    "name": "Call of Cathulu",
-    "scope": "/uidd2017/",
+    "name": "Bed exist alarm",
+    "scope": "/bedalarm/",
     "display": "fullscreen",
-    "start_url": "https://frank12331.github.io/uidd2017/",
-    "short_name": "COC",
+    "start_url": "https://frank12331.github.io/bedalarm/",
+    "short_name": "離床Lite",
     "theme_color": "transparent",
     "description": "",
     "orientation": "any",
