--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "scope": "/bedalarm/",
     "display": "fullscreen",
     "start_url": "https://frank12331.github.io/bedalarm/",
-    "short_name": "BALite",
+    "short_name": "離床Lite",
     "theme_color": "transparent",
     "description": "",
     "orientation": "any",
